Moved to python 3.9 and to SM Studio compatible exec env

--- a/examples/create_abalone_dataset.ipynb
+++ b/examples/create_abalone_dataset.ipynb
@@ -38,8 +38,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = ['Sex','Length','Diameter','Height','Whole weight','Shucked weight','Viscera weight','Shell weight','Rings']\n",
-    "data = pd.read_csv('abalone.data', names = names)"
+    "names = [\n",
+    "    \"Sex\",\n",
+    "    \"Length\",\n",
+    "    \"Diameter\",\n",
+    "    \"Height\",\n",
+    "    \"Whole weight\",\n",
+    "    \"Shucked weight\",\n",
+    "    \"Viscera weight\",\n",
+    "    \"Shell weight\",\n",
+    "    \"Rings\",\n",
+    "]\n",
+    "data = pd.read_csv(\"abalone.data\", names=names)"
    ]
   },
   {
@@ -207,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('abalone-dataset.csv', index=False)"
+    "data.to_csv(\"abalone-dataset.csv\", index=False)"
    ]
   }
  ],
