--- a/nbs/lake_experiment.ipynb
+++ b/nbs/lake_experiment.ipynb
@@ -38,7 +38,6 @@
     "\n",
     "import boto3\n",
     "import pandas as pd\n",
-    "from incense.artifact import Artifact, content_type_to_artifact_cls\n",
     "from pyrsistent import freeze, thaw\n",
     "from sciflow.s3_utils import S3File, s3_join"
    ]
@@ -63,6 +62,169 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "import os\n",
+    "import pickle\n",
+    "import warnings\n",
+    "from copy import copy\n",
+    "from typing import *\n",
+    "\n",
+    "import pandas as pd\n",
+    "from IPython import display\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "\n",
+    "class Artifact:\n",
+    "    \"\"\"Displays or saves an artifact.\"\"\"\n",
+    "\n",
+    "    can_render: Set[str] = set()\n",
+    "\n",
+    "    def __init__(self, name: str, file, content_type: str = None):\n",
+    "        self.name = name\n",
+    "        self.file = file\n",
+    "        self.content_type = content_type\n",
+    "        self.extension = (\n",
+    "            \"\" if self.content_type is None else self.content_type.split(\"/\")[-1]\n",
+    "        )\n",
+    "        self._content = None\n",
+    "        self._rendered = None\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.__class__.__name__}(name={self.name})\"\n",
+    "\n",
+    "    def render(self):\n",
+    "        \"\"\"Render the artifact according to its content-type.\"\"\"\n",
+    "        if self._rendered is None:\n",
+    "            self._rendered = self._render()\n",
+    "        return self._rendered\n",
+    "\n",
+    "    def _render(self):\n",
+    "        \"\"\"Return the object that represents the rendered artifact.\"\"\"\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    def show(self):\n",
+    "        warnings.warn(\n",
+    "            \"`show` is deprecated in favor of `render` and will removed in a future release.\",\n",
+    "            DeprecationWarning,\n",
+    "            stacklevel=2,\n",
+    "        )\n",
+    "        return self.render()\n",
+    "\n",
+    "    def save(self, to_dir: str = \"\") -> None:\n",
+    "        \"\"\"\n",
+    "        Save artifact to disk.\n",
+    "\n",
+    "        Args:\n",
+    "            to_dir: Directory in which to save the artifact. Defaults to the current working directory.\n",
+    "\n",
+    "        \"\"\"\n",
+    "        if to_dir:\n",
+    "            os.makedirs(str(to_dir), exist_ok=True)\n",
+    "        with open(os.path.join(str(to_dir), self._make_filename()), \"wb\") as file:\n",
+    "            file.write(self.content)\n",
+    "\n",
+    "    def as_content_type(self, content_type: str) -> \"Artifact\":\n",
+    "        \"\"\"Interpret artifact as being of content-type.\"\"\"\n",
+    "        try:\n",
+    "            artifact_type = content_type_to_artifact_cls[content_type]\n",
+    "        except KeyError:\n",
+    "            raise ValueError(\n",
+    "                f\"Incense does not have a class that maps to content-type {content_type}\"\n",
+    "            )\n",
+    "        else:\n",
+    "            return self.as_type(artifact_type)\n",
+    "\n",
+    "    def as_type(self, artifact_type) -> \"Artifact\":\n",
+    "        self.file.seek(0)\n",
+    "        return artifact_type(self.name, self.file)\n",
+    "\n",
+    "    @property\n",
+    "    def content(self):\n",
+    "        \"\"\"Access the raw bytes of the artifact.\"\"\"\n",
+    "        if self._content is None:\n",
+    "            self._content = self.file.read()\n",
+    "        return self._content\n",
+    "\n",
+    "    def _make_filename(self):\n",
+    "        # TODO does this work on gridfs file?\n",
+    "        exp_id, artifact_name = self.file.name.split(\"/\")[-2:]\n",
+    "        return f\"{exp_id}_{artifact_name}\" + (\n",
+    "            \"\" if artifact_name.endswith(self.extension) else f\".{self.extension}\"\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "class ImageArtifact(Artifact):\n",
+    "    \"\"\"Displays or saves an image artifact.\"\"\"\n",
+    "\n",
+    "    can_render = {\"image/png\", \"image/jpeg\"}\n",
+    "\n",
+    "    def _render(self):\n",
+    "        return display.Image(data=self.content)\n",
+    "\n",
+    "\n",
+    "class MP4Artifact(Artifact):\n",
+    "    \"\"\"Displays or saves a MP4 artifact\"\"\"\n",
+    "\n",
+    "    can_render = {\"video/mp4\"}\n",
+    "\n",
+    "    def _render(self):\n",
+    "        self.save()\n",
+    "        return HTML(\n",
+    "            f\"\"\"\n",
+    "        <video width=\"640\" height=\"480\" controls autoplay>\n",
+    "          <source src=\"{self._make_filename()}\" type=\"video/mp4\">\n",
+    "        </video>\n",
+    "        \"\"\"\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "class CSVArtifact(Artifact):\n",
+    "    \"\"\"Displays and saves a CSV artifact\"\"\"\n",
+    "\n",
+    "    can_render = {\"text/csv\"}\n",
+    "\n",
+    "    def _render(self):\n",
+    "        return pd.read_csv(self.file)\n",
+    "\n",
+    "\n",
+    "class PickleArtifact(Artifact):\n",
+    "    \"\"\"Displays and saves a Pickle artifact\"\"\"\n",
+    "\n",
+    "    can_render: Set[str] = set()\n",
+    "\n",
+    "    def __init__(self, name: str, file, content_type: str = None):\n",
+    "        super().__init__(name, file, content_type)\n",
+    "        self.extension = \"pickle\"\n",
+    "\n",
+    "    def _render(self):\n",
+    "        return pickle.load(self.file)\n",
+    "\n",
+    "\n",
+    "class PDFArtifact(Artifact):\n",
+    "    \"\"\"Displays and saves a PDF artifacts.\"\"\"\n",
+    "\n",
+    "    can_render = {\"application/pdf\"}\n",
+    "\n",
+    "    # TODO probably needs jupyter extension to be able to display pdf.\n",
+    "    # def _render(self):\n",
+    "    #     return IFrame(self._make_filename(), width=600, height=300)\n",
+    "    #\n",
+    "\n",
+    "\n",
+    "content_type_to_artifact_cls = {}\n",
+    "for cls in copy(locals()).values():\n",
+    "    if isinstance(cls, type) and issubclass(cls, Artifact):\n",
+    "        for content_type in cls.can_render:\n",
+    "            content_type_to_artifact_cls[content_type] = cls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,10 +305,11 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
-   "display_name": "Python [conda env:sciflow]",
+   "display_name": "sciflow (sciflow/3)",
    "language": "python",
-   "name": "conda-env-sciflow-py"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -158,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
