--- a/nbs/lake_experiment_loader.ipynb
+++ b/nbs/lake_experiment_loader.ipynb
@@ -47,10 +47,8 @@
     "import boto3\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from incense.artifact import CSVArtifact\n",
-    "from incense.experiment import Experiment\n",
     "from pandas.io.sql import DatabaseError\n",
-    "from sciflow.experiment.lake_experiment import LakeExperiment\n",
+    "from sciflow.experiment.lake_experiment import CSVArtifact, LakeExperiment\n",
     "from sciflow.s3_utils import delete_dir\n",
     "from sciflow.utils import odbc_connect, prepare_env, query\n",
     "from tinydb import Query, TinyDB\n",
@@ -143,7 +141,7 @@
     "        experiment_id: str = None,\n",
     "        order_by: str = None,\n",
     "        limit: int = None,\n",
-    "    ) -> Experiment:\n",
+    "    ) -> LakeExperiment:\n",
     "        if experiment_name is None:\n",
     "            experiment_name = self.experiment_name\n",
     "        table_name = f\"{self.table_context}.{experiment_name}.runs\"\n",
@@ -312,9 +310,9 @@
      "data": {
       "text/plain": [
        "Project: sciflow\n",
-       "Experiment: generated_experiment_name_91335\n",
-       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_91335\n",
-       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_91335"
+       "Experiment: generated_experiment_name_47624\n",
+       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_47624\n",
+       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_47624"
       ]
      },
      "execution_count": 12,
@@ -412,7 +410,7 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7fc2ec31c0d0>"
+       "<sacred.run.Run at 0x7f830d89f8b0>"
       ]
      },
      "execution_count": 14,
@@ -429,7 +427,16 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    missing_loader.find_all()\n",
@@ -442,7 +449,16 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "assert loader.find_by_id(1) is None"
    ]
@@ -451,7 +467,18 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n",
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "ex1 = loader.find_by_id(sample_id_1)\n",
     "assert len(ex1.metrics) == 1\n",
@@ -465,7 +492,18 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n",
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    ex_ids = (sample_id_1,)\n",
@@ -480,7 +518,22 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n",
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n",
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n",
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "assert [ex.experiment_id for ex in loader.find_latest()] == [sample_id_2, sample_id_1]\n",
     "assert [ex.experiment_id for ex in loader.find_latest(n=1)] == [sample_id_2]"
@@ -490,7 +543,18 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n",
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "assert len(loader.find_all()) == 2\n",
     "assert sorted([ex.experiment_id for ex in loader.find_all()]) == sorted(\n",
@@ -509,6 +573,14 @@
      "text": [
       "Table not found\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
@@ -522,7 +594,16 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "assert len(loader.find_by_name(experiment_name)) == 2"
    ]
@@ -531,7 +612,18 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n",
+      "/home/sagemaker-user/.local/lib/python3.9/site-packages/pandas/io/sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "assert len(loader.find_by_config_key(\"recipient\", \"test\")) == 2\n",
     "assert loader.find_by_config_key(\"recipient\", \"hello\") is None"
@@ -549,10 +641,11 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python [conda env:sciflow]",
+   "display_name": "sciflow (sciflow/3)",
    "language": "python",
-   "name": "conda-env-sciflow-py"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -564,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
