--- a/examples/02_hello_sciflow.ipynb
+++ b/examples/02_hello_sciflow.ipynb
@@ -313,10 +313,11 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python [conda env:sciflow]",
+   "display_name": "python3 (conda-env/4)",
    "language": "python",
-   "name": "conda-env-sciflow-py"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/conda-env/4"
   },
   "language_info": {
    "codemirror_mode": {
@@ -328,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
