--- a/examples/abalone_sm_pipeline.ipynb
+++ b/examples/abalone_sm_pipeline.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +55,7 @@
     "    ProcessingInput,\n",
     "    ProcessingOutput,\n",
     "    ScriptProcessor,\n",
+    "    FrameworkProcessor,\n",
     ")\n",
     "from sagemaker.sklearn.processing import SKLearnProcessor\n",
     "from sagemaker.sklearn.estimator import SKLearn\n",
@@ -60,16 +70,13 @@
     ")\n",
     "from sagemaker.workflow.pipeline import Pipeline\n",
     "from sagemaker.workflow.properties import PropertyFile\n",
-    "from sagemaker.workflow.steps import (\n",
-    "    ProcessingStep,\n",
-    "    TrainingStep,\n",
-    ")\n",
+    "from sagemaker.workflow.steps import ProcessingStep, TrainingStep, CacheConfig\n",
     "from sagemaker.workflow.step_collections import RegisterModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,30 +96,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import PosixPath\n",
-    "bucket = 's3bawspprwe1chatbotunpub01'\n",
-    "dataset_key_prefix = 'datasets/abalone'\n",
+    "\n",
+    "bucket = \"s3bawspprwe1chatbotunpub01\"\n",
+    "dataset_key_prefix = \"datasets/abalone\"\n",
     "\n",
     "role = sagemaker.get_execution_role()\n",
-    "repo_root = PosixPath(os.path.join(os.path.expanduser('~'), 'git/sciflow'))"
+    "repo_root = PosixPath(os.path.join(os.path.expanduser(\"~\"), \"git/sciflow\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/root/git/sciflow')"
+       "PosixPath('/home/sagemaker-user/git/sciflow')"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,13 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_session(default_bucket, region):\n",
-    "    region = region='eu-west-1'\n",
+    "    region = region = \"eu-west-1\"\n",
     "    return sagemaker.session.Session(default_bucket=default_bucket)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache_config = CacheConfig(enable_caching=True, expire_after=\"1d\")"
    ]
   },
   {
@@ -143,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +188,9 @@
     "        role = sagemaker.session.get_execution_role(sagemaker_session)\n",
     "\n",
     "    # parameters for pipeline execution\n",
-    "    processing_instance_count = ParameterInteger(name=\"ProcessingInstanceCount\", default_value=1)\n",
+    "    processing_instance_count = ParameterInteger(\n",
+    "        name=\"ProcessingInstanceCount\", default_value=1\n",
+    "    )\n",
     "    processing_instance_type = ParameterString(\n",
     "        name=\"ProcessingInstanceType\", default_value=\"ml.m5.xlarge\"\n",
     "    )\n",
@@ -200,23 +219,31 @@
     "        processor=sklearn_processor,\n",
     "        outputs=[\n",
     "            ProcessingOutput(output_name=\"train\", source=\"/opt/ml/processing/train\"),\n",
-    "            ProcessingOutput(output_name=\"validation\", source=\"/opt/ml/processing/validation\"),\n",
+    "            ProcessingOutput(\n",
+    "                output_name=\"validation\", source=\"/opt/ml/processing/validation\"\n",
+    "            ),\n",
     "            ProcessingOutput(output_name=\"test\", source=\"/opt/ml/processing/test\"),\n",
     "        ],\n",
-    "        code=os.path.join(repo_root, \"examples\", \"scripts\", \"abalone_preprocess.py\"),\n",
+    "        code=os.path.join(\n",
+    "            repo_root, \"examples\", \"abalone_files\", \"abalone_preprocess.py\"\n",
+    "        ),\n",
     "        job_arguments=[\"--input-data\", input_data],\n",
+    "        cache_config=cache_config,\n",
     "    )\n",
     "\n",
     "    # training step for generating model artifacts\n",
-    "    model_path = f\"s3://{sagemaker_session.default_bucket()}/{base_job_prefix}/AbaloneTrain\"\n",
-    "    \n",
-    "    metrics = ['Validation MSE', 'Validation STD']\n",
-    "    metrics_regex = [{'Name': m, 'Regex': f'{m}=(.*?);'} for m in metrics]\n",
-    "    \n",
+    "    model_path = (\n",
+    "        f\"s3://{sagemaker_session.default_bucket()}/{base_job_prefix}/AbaloneTrain\"\n",
+    "    )\n",
+    "\n",
+    "    metrics = [\"Train MSE\", \"Train STD\", \"Validation MSE\", \"Validation STD\"]\n",
+    "    metrics_regex = [{\"Name\": m, \"Regex\": f\"{m}=(.*?);\"} for m in metrics]\n",
+    "\n",
     "    sklearn_estimator = SKLearn(\n",
-    "        'scripts/abalone_train.py',\n",
-    "        framework_version='0.23-1',\n",
-    "        hyperparameters = {'max_iter': 100, 'learning_rate': 0.1},\n",
+    "        source_dir=\"abalone_files\",\n",
+    "        entry_point=\"abalone_train.py\",\n",
+    "        framework_version=\"0.23-1\",\n",
+    "        hyperparameters={\"max_iter\": 30, \"learning_rate\": 0.1},\n",
     "        instance_type=training_instance_type,\n",
     "        instance_count=1,\n",
     "        output_path=model_path,\n",
@@ -226,7 +253,7 @@
     "        metric_definitions=metrics_regex,\n",
     "        enable_sagemaker_metrics=True,\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    step_train = TrainingStep(\n",
     "        name=\"TrainAbaloneModel\",\n",
     "        estimator=sklearn_estimator,\n",
@@ -244,17 +271,19 @@
     "                content_type=\"text/csv\",\n",
     "            ),\n",
     "        },\n",
+    "        cache_config=cache_config,\n",
     "    )\n",
     "\n",
     "    # processing step for evaluation\n",
     "    script_eval = SKLearnProcessor(\n",
-    "        framework_version='0.23-1',\n",
+    "        framework_version=\"0.23-1\",\n",
     "        instance_type=processing_instance_type,\n",
     "        instance_count=1,\n",
     "        base_job_name=f\"{base_job_prefix}/script-abalone-eval\",\n",
     "        sagemaker_session=sagemaker_session,\n",
     "        role=role,\n",
     "    )\n",
+    "\n",
     "    evaluation_report = PropertyFile(\n",
     "        name=\"AbaloneEvaluationReport\",\n",
     "        output_name=\"evaluation\",\n",
@@ -264,6 +293,12 @@
     "        name=\"EvaluateAbaloneModel\",\n",
     "        processor=script_eval,\n",
     "        inputs=[\n",
+    "            ProcessingInput(\n",
+    "                source=os.path.join(\n",
+    "                    repo_root, \"examples\", \"abalone_files\", \"requirements.txt\"\n",
+    "                ),\n",
+    "                destination=\"/opt/ml/processing/requirements\",\n",
+    "            ),\n",
     "            ProcessingInput(\n",
     "                source=step_train.properties.ModelArtifacts.S3ModelArtifacts,\n",
     "                destination=\"/opt/ml/processing/model\",\n",
@@ -276,19 +311,24 @@
     "            ),\n",
     "        ],\n",
     "        outputs=[\n",
-    "            ProcessingOutput(output_name=\"evaluation\", source=\"/opt/ml/processing/evaluation\"),\n",
+    "            ProcessingOutput(\n",
+    "                output_name=\"evaluation\", source=\"/opt/ml/processing/evaluation\"\n",
+    "            ),\n",
     "        ],\n",
-    "        code=os.path.join(repo_root, \"examples\", \"scripts\", \"abalone_eval.py\"),\n",
+    "        code=os.path.join(repo_root, \"examples\", \"abalone_files\", \"abalone_eval.py\"),\n",
     "        property_files=[evaluation_report],\n",
+    "        cache_config=cache_config,\n",
     "    )\n",
     "\n",
     "    # register model step that will be conditionally executed\n",
     "    model_metrics = ModelMetrics(\n",
     "        model_statistics=MetricsSource(\n",
     "            s3_uri=\"{}/evaluation.json\".format(\n",
-    "                step_eval.arguments[\"ProcessingOutputConfig\"][\"Outputs\"][0][\"S3Output\"][\"S3Uri\"]\n",
+    "                step_eval.arguments[\"ProcessingOutputConfig\"][\"Outputs\"][0][\"S3Output\"][\n",
+    "                    \"S3Uri\"\n",
+    "                ]\n",
     "            ),\n",
-    "            content_type=\"application/json\"\n",
+    "            content_type=\"application/json\",\n",
     "        )\n",
     "    )\n",
     "    step_register = RegisterModel(\n",
@@ -309,7 +349,7 @@
     "        left=JsonGet(\n",
     "            step=step_eval,\n",
     "            property_file=evaluation_report,\n",
-    "            json_path=\"regression_metrics.mse.value\"\n",
+    "            json_path=\"regression_metrics.mse.value\",\n",
     "        ),\n",
     "        right=15.0,\n",
     "    )\n",
@@ -338,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -351,21 +391,21 @@
     }
    ],
    "source": [
-    "pipeline = get_pipeline(default_bucket = bucket, region = 'eu-west-1')"
+    "pipeline = get_pipeline(default_bucket=bucket, region=\"eu-west-1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pipeline(name='AbalonePipeline', parameters=[ParameterString(name='ProcessingInstanceType', parameter_type=<ParameterTypeEnum.STRING: 'String'>, default_value='ml.m5.xlarge'), ParameterInteger(name='ProcessingInstanceCount', parameter_type=<ParameterTypeEnum.INTEGER: 'Integer'>, default_value=1), ParameterString(name='TrainingInstanceType', parameter_type=<ParameterTypeEnum.STRING: 'String'>, default_value='ml.m5.xlarge'), ParameterString(name='ModelApprovalStatus', parameter_type=<ParameterTypeEnum.STRING: 'String'>, default_value='PendingManualApproval'), ParameterString(name='InputDataUrl', parameter_type=<ParameterTypeEnum.STRING: 'String'>, default_value='s3://s3bawspprwe1chatbotunpub01/datasets/abalone/abalone-dataset.csv')], pipeline_experiment_config=<sagemaker.workflow.pipeline_experiment_config.PipelineExperimentConfig object at 0x7f6cc73c2550>, steps=[ProcessingStep(name='PreprocessAbaloneData', display_name=None, description=None, step_type=<StepTypeEnum.PROCESSING: 'Processing'>, depends_on=None), TrainingStep(name='TrainAbaloneModel', display_name=None, description=None, step_type=<StepTypeEnum.TRAINING: 'Training'>, depends_on=None), ProcessingStep(name='EvaluateAbaloneModel', display_name=None, description=None, step_type=<StepTypeEnum.PROCESSING: 'Processing'>, depends_on=None), ConditionStep(name='CheckMSEAbaloneEvaluation', display_name=None, description=None, step_type=<StepTypeEnum.CONDITION: 'Condition'>, depends_on=None)], sagemaker_session=<sagemaker.session.Session object at 0x7f6cb6962f90>)"
+       "Pipeline(name='AbalonePipeline', parameters=[ParameterString(name='ProcessingInstanceType', parameter_type=<ParameterTypeEnum.STRING: 'String'>, default_value='ml.m5.xlarge'), ParameterInteger(name='ProcessingInstanceCount', parameter_type=<ParameterTypeEnum.INTEGER: 'Integer'>, default_value=1), ParameterString(name='TrainingInstanceType', parameter_type=<ParameterTypeEnum.STRING: 'String'>, default_value='ml.m5.xlarge'), ParameterString(name='ModelApprovalStatus', parameter_type=<ParameterTypeEnum.STRING: 'String'>, default_value='PendingManualApproval'), ParameterString(name='InputDataUrl', parameter_type=<ParameterTypeEnum.STRING: 'String'>, default_value='s3://s3bawspprwe1chatbotunpub01/datasets/abalone/abalone-dataset.csv')], pipeline_experiment_config=<sagemaker.workflow.pipeline_experiment_config.PipelineExperimentConfig object at 0x7f099731f7f0>, steps=[ProcessingStep(name='PreprocessAbaloneData', display_name=None, description=None, step_type=<StepTypeEnum.PROCESSING: 'Processing'>, depends_on=None), TrainingStep(name='TrainAbaloneModel', display_name=None, description=None, step_type=<StepTypeEnum.TRAINING: 'Training'>, depends_on=None), ProcessingStep(name='EvaluateAbaloneModel', display_name=None, description=None, step_type=<StepTypeEnum.PROCESSING: 'Processing'>, depends_on=None), ConditionStep(name='CheckMSEAbaloneEvaluation', display_name=None, description=None, step_type=<StepTypeEnum.CONDITION: 'Condition'>, depends_on=None)], sagemaker_session=<sagemaker.session.Session object at 0x7f097d4923d0>)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -391,16 +431,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:eu-west-1:368653567616:pipeline/abalonepipeline',\n",
-       " 'ResponseMetadata': {'RequestId': '143ad2f5-0899-4109-a005-793b4da2b118',\n",
+       " 'ResponseMetadata': {'RequestId': '81f6abd3-260d-4009-b508-8fdcd736dbff',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '143ad2f5-0899-4109-a005-793b4da2b118',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '81f6abd3-260d-4009-b508-8fdcd736dbff',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '83',\n",
-       "   'date': 'Thu, 27 Jan 2022 12:36:37 GMT'},\n",
+       "   'date': 'Fri, 18 Feb 2022 16:37:42 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,18 +460,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 172 ms, sys: 15.4 ms, total: 188 ms\n",
+      "Wall time: 7min 31s\n"
+     ]
+    }
+   ],
    "source": [
     "%time execution.wait()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [178]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -443,7 +504,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(fn)\n",
-    "df.columns = [c.strip().lower().replace(' ', '_') for c in df.columns]"
+    "df.columns = [c.strip().lower().replace(\" \", \"_\") for c in df.columns]"
    ]
   },
   {
@@ -577,9 +638,9 @@
  "metadata": {
   "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (Data Science)",
+   "display_name": "python3 (conda-env/4)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:470317259841:image/datascience-1.0"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/conda-env/4"
   },
   "language_info": {
    "codemirror_mode": {
@@ -591,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
