--- a/nbs/scilint.ipynb
+++ b/nbs/scilint.ipynb
@@ -49,7 +49,7 @@
     "import nbformat\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.export import read_nb\n",
-    "from nbqa.__main__ import _get_configs, _run_on_one_root_dir\n",
+    "from nbqa.__main__ import _get_configs, _main\n",
     "from nbqa.cmdline import CLIArgs\n",
     "from nbqa.find_root import find_project_root\n",
     "from sciflow.utils import load_nb_module"
@@ -86,7 +86,7 @@
     "    project_root: Path = find_project_root(tuple([str(Path(\".\").resolve())]))\n",
     "    args = CLIArgs.parse_args([cmd, str(project_root)])\n",
     "    configs = _get_configs(args, project_root)\n",
-    "    output_code = _run_on_one_root_dir(args, configs, project_root)\n",
+    "    output_code = _main(args, configs)\n",
     "    return output_code"
    ]
   },
@@ -412,7 +412,7 @@
     {
      "data": {
       "text/plain": [
-       "0.032679738562091505"
+       "0.03289473684210526"
       ]
      },
      "execution_count": 19,
@@ -452,7 +452,7 @@
     {
      "data": {
       "text/plain": [
-       "0.03551401869158879"
+       "0.03773584905660377"
       ]
      },
      "execution_count": 21,
@@ -497,7 +497,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.25"
       ]
      },
      "execution_count": 23,
@@ -598,7 +598,7 @@
     {
      "data": {
       "text/plain": [
-       "6406"
+       "4599"
       ]
      },
      "execution_count": 28,
@@ -618,7 +618,7 @@
     {
      "data": {
       "text/plain": [
-       "1367"
+       "1361"
       ]
      },
      "execution_count": 29,
@@ -632,10 +632,11 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python [conda env:sciflow]",
+   "display_name": "sciflow (sciflow/3)",
    "language": "python",
-   "name": "conda-env-sciflow-py"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -647,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
