Added init command

--- a/examples/abalone_files/abalone_sm_pipeline.ipynb
+++ b/examples/abalone_files/abalone_sm_pipeline.ipynb
@@ -41,37 +41,20 @@
    "source": [
     "import os\n",
     "\n",
-    "import boto3\n",
     "import sagemaker\n",
     "import sagemaker.session\n",
-    "\n",
-    "from sagemaker.estimator import Estimator\n",
     "from sagemaker.inputs import TrainingInput\n",
-    "from sagemaker.model_metrics import (\n",
-    "    MetricsSource,\n",
-    "    ModelMetrics,\n",
-    ")\n",
-    "from sagemaker.processing import (\n",
-    "    ProcessingInput,\n",
-    "    ProcessingOutput,\n",
-    "    ScriptProcessor,\n",
-    "    FrameworkProcessor,\n",
-    ")\n",
-    "from sagemaker.sklearn.processing import SKLearnProcessor\n",
+    "from sagemaker.model_metrics import MetricsSource, ModelMetrics\n",
+    "from sagemaker.processing import ProcessingInput, ProcessingOutput\n",
     "from sagemaker.sklearn.estimator import SKLearn\n",
+    "from sagemaker.sklearn.processing import SKLearnProcessor\n",
+    "from sagemaker.workflow.condition_step import ConditionStep, JsonGet\n",
     "from sagemaker.workflow.conditions import ConditionLessThanOrEqualTo\n",
-    "from sagemaker.workflow.condition_step import (\n",
-    "    ConditionStep,\n",
-    "    JsonGet,\n",
-    ")\n",
-    "from sagemaker.workflow.parameters import (\n",
-    "    ParameterInteger,\n",
-    "    ParameterString,\n",
-    ")\n",
+    "from sagemaker.workflow.parameters import ParameterInteger, ParameterString\n",
     "from sagemaker.workflow.pipeline import Pipeline\n",
     "from sagemaker.workflow.properties import PropertyFile\n",
-    "from sagemaker.workflow.steps import ProcessingStep, TrainingStep, CacheConfig\n",
-    "from sagemaker.workflow.step_collections import RegisterModel"
+    "from sagemaker.workflow.step_collections import RegisterModel\n",
+    "from sagemaker.workflow.steps import CacheConfig, ProcessingStep, TrainingStep"
    ]
   },
   {
@@ -80,18 +63,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "import json\n",
-    "\n",
     "import sagemaker\n",
-    "from sagemaker.s3 import parse_s3_url\n",
-    "\n",
-    "from sagemaker.workflow.pipeline import Pipeline\n",
+    "from sagemaker.inputs import TrainingInput\n",
+    "from sagemaker.processing import ProcessingInput, ProcessingOutput\n",
     "from sagemaker.workflow.parameters import ParameterInteger, ParameterString\n",
-    "from sagemaker.workflow.steps import ProcessingStep, TrainingStep\n",
-    "from sagemaker.processing import ScriptProcessor, ProcessingInput, ProcessingOutput\n",
-    "from sagemaker.tensorflow import TensorFlow\n",
-    "from sagemaker.inputs import TrainingInput"
+    "from sagemaker.workflow.pipeline import Pipeline\n",
+    "from sagemaker.workflow.steps import ProcessingStep, TrainingStep"
    ]
   },
   {
