--- a/examples/abalone.ipynb
+++ b/examples/abalone.ipynb
@@ -9,6 +9,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# default_exp abalone"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -41,57 +50,43 @@
    "source": [
     "# export\n",
     "\n",
-    "import os\n",
-    "from pathlib import Path, PosixPath\n",
-    "import json\n",
-    "import boto3\n",
-    "import argparse\n",
     "import logging\n",
-    "import pathlib\n",
-    "import tempfile\n",
-    "\n",
-    "import boto3\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import subprocess\n",
-    "\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "\n",
-    "import argparse\n",
-    "import json\n",
     "import os\n",
+    "import subprocess\n",
     "import sys\n",
-    "from pathlib import Path\n",
-    "from typing import Dict\n",
-    "\n",
-    "import boto3\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from six.moves.urllib.parse import urlparse\n",
-    "from sklearn.experimental import enable_hist_gradient_boosting\n",
-    "from sklearn.ensemble import HistGradientBoostingRegressor\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.inspection import permutation_importance\n",
-    "import matplotlib.pyplot as plt\n",
-    "import joblib\n",
     "import time\n",
-    "import logging"
+    "from pathlib import Path\n",
+    "\n",
+    "import joblib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.ensemble import HistGradientBoostingRegressor\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.inspection import permutation_importance\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "bucket = \"s3bawspprwe1chatbotunpub01\"\n",
     "dataset_key_prefix = \"datasets/abalone\"\n",
-    "data_path = f\"s3://{bucket}/{dataset_key_prefix}/abalone-dataset.csv\""
+    "data_path = f\"s3://{bucket}/{dataset_key_prefix}/abalone-dataset.csv\"\n",
+    "hyperparameters = {\"max_iter\": 50}\n",
+    "model_dir = \"/tmp/replacewithgenerated\""
    ]
   },
   {
@@ -120,7 +115,6 @@
     "        \"shell_weight\",\n",
     "    ]\n",
     "    feature_columns_names = [c.lower() for c in feature_columns_names]\n",
-    "    label_column = \"rings\"\n",
     "\n",
     "    has_additional_dependencies = Path(\"requirements.txt\").exists()\n",
     "    if has_additional_dependencies:\n",
@@ -179,43 +173,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Applying transforms.\n",
-      "Splitting 4177 rows of data into train, validation, test datasets.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results = preprocess(data_path)"
+    "# export\n",
+    "\n",
+    "\n",
+    "def plot_perm_importances(model_dir, model, X, y, dataset_name: str):\n",
+    "    result = permutation_importance(\n",
+    "        model, X, y, n_repeats=10, random_state=42, n_jobs=2\n",
+    "    )\n",
+    "    sorted_idx = result.importances_mean.argsort()\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.boxplot(\n",
+    "        result.importances[sorted_idx].T, vert=False, labels=X.columns[sorted_idx]\n",
+    "    )\n",
+    "    ax.set_title(f\"Permutation Importances: {dataset_name}\")\n",
+    "    fig.tight_layout()\n",
+    "    plt.savefig(\n",
+    "        os.path.join(model_dir, f\"permutation_importances_{dataset_name}.pdf\"),\n",
+    "        dpi=150,\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2923, 11)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,23 +211,6 @@
     "    logger = logging.getLogger()\n",
     "    logger.setLevel(logging.INFO)\n",
     "    logger.addHandler(logging.StreamHandler())\n",
-    "\n",
-    "    def plot_perm_importances(model_dir, model, X, y, dataset_name: str):\n",
-    "        result = permutation_importance(\n",
-    "            model, X, y, n_repeats=10, random_state=42, n_jobs=2\n",
-    "        )\n",
-    "        sorted_idx = result.importances_mean.argsort()\n",
-    "\n",
-    "        fig, ax = plt.subplots()\n",
-    "        ax.boxplot(\n",
-    "            result.importances[sorted_idx].T, vert=False, labels=X.columns[sorted_idx]\n",
-    "        )\n",
-    "        ax.set_title(f\"Permutation Importances: {dataset_name}\")\n",
-    "        fig.tight_layout()\n",
-    "        plt.savefig(\n",
-    "            os.path.join(model_dir, f\"permutation_importances_{dataset_name}.pdf\"),\n",
-    "            dpi=150,\n",
-    "        )\n",
     "\n",
     "    model = HistGradientBoostingRegressor(**hyperparameters)\n",
     "\n",
@@ -286,40 +254,13 @@
     "    joblib.dump(model, os.path.join(model_dir, \"model.joblib\"))\n",
     "    logger.info(\"Model persisted to file.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'preprocess' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocess\u001b[49m(data_path)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'preprocess' is not defined"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
-  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "python3 (conda-env/4)",
+   "display_name": "sciflow (sciflow/3)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/conda-env/4"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -331,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
