--- a/nbs/lake_experiment.ipynb
+++ b/nbs/lake_experiment.ipynb
@@ -39,6 +39,7 @@
     "import boto3\n",
     "import pandas as pd\n",
     "from pyrsistent import freeze, thaw\n",
+    "\n",
     "from sciflow.s3_utils import S3File, s3_join"
    ]
   },
@@ -71,7 +72,7 @@
     "import pickle\n",
     "import warnings\n",
     "from copy import copy\n",
-    "from typing import *\n",
+    "from typing import Set\n",
     "\n",
     "import pandas as pd\n",
     "from IPython import display\n",
