Added pythonpath creation in init & tests

--- a/nbs/init.ipynb
+++ b/nbs/init.ipynb
@@ -57,17 +57,15 @@
    "source": [
     "# export \n",
     "\n",
-    "env_file_blank = \"\"\"\n",
-    "# export USER=\n",
-    "# export ODBC_DRIVER=\n",
-    "# export ODBC_USER=\n",
-    "# export ODBC_PWD=\n",
-    "# export ODBC_PORT=\n",
-    "# export ODBC_HOST=\n",
-    "# export SSL_CERTS=\n",
-    "# export SCIFLOW_BUCKET=\n",
-    "# export SCIFLOW_BUCKET_TABLE_ALIAS=\n",
-    "\n",
+    "env_file_blank = \"\"\"export USER=\n",
+    "export ODBC_DRIVER=\n",
+    "export ODBC_USER=\n",
+    "export ODBC_PWD=\n",
+    "export ODBC_PORT=\n",
+    "export ODBC_HOST=\n",
+    "export SSL_CERTS=\n",
+    "export SCIFLOW_BUCKET=\n",
+    "export SCIFLOW_BUCKET_TABLE_ALIAS=\n",
     "\"\"\""
    ]
   },
@@ -97,6 +95,19 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "examples_root = Path('../examples')\n",
+    "project_root = Path('../')\n",
+    "sciflow_dir = Path('test/.sciflow')\n",
+    "test_root = Path('test')\n",
+    "env_path = os.path.join(sciflow_dir, 'env')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -104,13 +115,14 @@
      "text": [
       "Wrote new SciFlow environment file to: /home/sagemaker-user/git/sciflow/nbs/test/.sciflow/env\n",
       "Skipping SciFlow environment file creation - already exists\n",
-      "Skipping SciFlow environment file creation - already exists\n"
+      "Skipping SciFlow environment file creation - already exists\n",
+      "Wrote new SciFlow environment file to: /home/sagemaker-user/git/sciflow/nbs/test/.sciflow/env\n"
      ]
     }
    ],
    "source": [
-    "sciflow_dir = Path('test/.sciflow')\n",
-    "env_path = os.path.join(sciflow_dir, 'env')\n",
+    "if Path('test/.sciflow/env').exists():\n",
+    "    Path('test/.sciflow/env').unlink()\n",
     "\n",
     "write_env_file(sciflow_dir)\n",
     "\n",
@@ -132,15 +144,19 @@
     "assert(\"test\" == env_file_contents)\n",
     "        \n",
     "Path('test/.sciflow/env').unlink()\n",
-    "assert(not Path('test/.sciflow/env').exists())"
+    "assert(not Path('test/.sciflow/env').exists())\n",
+    "\n",
+    "write_env_file(sciflow_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
     "def read_env_file(sciflow_dir: Path = None):\n",
     "    if sciflow_dir is None:\n",
     "        sciflow_dir = Path('~/.sciflow').expanduser()\n",
@@ -152,17 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "examples_root = Path('../examples')\n",
-    "project_root = Path('../')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,10 +187,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
     "def edit_pythonpath(env_lines, dir_to_add: Path):\n",
     "    dir_str = str(dir_to_add.resolve())\n",
     "    existing_ppath = [p for p in env_lines if p.find('PYTHONPATH') > -1]\n",
@@ -207,131 +215,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
     "def write_edited_pythonpath(project_root: Path, sciflow_dir: Path = None):\n",
     "    if sciflow_dir is None:\n",
     "        sciflow_dir = Path('~/.sciflow').expanduser()\n",
     "    env_path = Path(sciflow_dir, 'env').resolve()\n",
     "    env_lines = read_env_file(sciflow_dir)\n",
-    "    new_text = edit_pythonpath(env_lines, dir_to_add)\n",
+    "    new_text = edit_pythonpath(env_lines, project_root)\n",
     "    with open(env_path, 'w') as env_file:\n",
     "            env_file.write(new_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"export USER='Donal Simmie'\\nexport ODBC_DRIVER=/opt/dremio-odbc/lib64/libdrillodbc_sb64.so\\nexport ODBC_USER=E02079\\nexport ODBC_PWD=hNKRMoSiRmOmsjoGJe9FG0ZMIrjFBhSEZK375M2xZRmmOWMdCHoGdb9vyj5+ww==\\nexport ODBC_PORT=31010\\nexport ODBC_HOST=dremio-preprod.newday.co.uk\\nexport SSL_CERTS=/etc/ssl/certs/ca-certificates.crt\\nexport SCIFLOW_BUCKET=pprsandboxpdlras3\\nexport SCIFLOW_BUCKET_TABLE_ALIAS=ra_s3\\nexport PYTHONPATH=$PYTHONPATH:/home/sagemaker-user/git/sciflow/examples\\n\""
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env_lines = read_env_file(sciflow_dir)\n",
-    "edit_pythonpath(env_lines, examples_root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"export USER='Donal Simmie'\\nexport ODBC_DRIVER=/opt/dremio-odbc/lib64/libdrillodbc_sb64.so\\nexport ODBC_USER=E02079\\nexport ODBC_PWD=hNKRMoSiRmOmsjoGJe9FG0ZMIrjFBhSEZK375M2xZRmmOWMdCHoGdb9vyj5+ww==\\nexport ODBC_PORT=31010\\nexport ODBC_HOST=dremio-preprod.newday.co.uk\\nexport SSL_CERTS=/etc/ssl/certs/ca-certificates.crt\\nexport SCIFLOW_BUCKET=pprsandboxpdlras3\\nexport SCIFLOW_BUCKET_TABLE_ALIAS=ra_s3\\n\""
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "''.join(env_lines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'export PYTHONPATH=$PYTHONPATH:/home/sagemaker-user/git/sciflow/examples\\n'"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edit_pythonpath(env_lines_wout_ppath, examples_root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'export PYTHONPATH=$PYTHONPATH:/home/sagemaker-user/git/sciflow/examples/home/sagemaker-user/git/sciflow\\n'"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edit_pythonpath(env_lines_w_1_ppath, examples_root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'export PYTHONPATH=$PYTHONPATH:/home/sagemaker-user/git/sciflow/examples/home/sagemaker-user/git/sciflow:/home/sagemaker-user/git/sciflow/examples\\n'"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edit_pythonpath(env_lines_w_2_ppath, examples_root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "env_vars = sorted(['USER',\n",
+    " 'ODBC_DRIVER',\n",
+    " 'ODBC_USER',\n",
+    " 'ODBC_PWD',\n",
+    " 'ODBC_PORT',\n",
+    " 'ODBC_HOST',\n",
+    " 'SSL_CERTS',\n",
+    " 'SCIFLOW_BUCKET',\n",
+    " 'SCIFLOW_BUCKET_TABLE_ALIAS',\n",
+    " 'PYTHONPATH'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_lines = read_env_file(sciflow_dir)\n",
+    "observed_vars = [x.split('=')[0].split(' ')[1] for x in edit_pythonpath(env_lines, examples_root).split('\\n') if x.find('export') > -1]\n",
+    "assert(env_vars == sorted(observed_vars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_edited_pythonpath(test_root, sciflow_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,21 +279,21 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def sciflow_init(project_root: Param(\"The root directory of the project\", Path) = None):\n",
+    "def sciflow_init(project_root: Param(\"The root directory of the project\", Path) = None, sciflow_dir: Param(\"The sciflow env directory\", Path) = None):\n",
     "    if project_root is None:\n",
     "        project_root = Path('.').resolve()\n",
     "    # TODO - Get latest templates files from web - if has internet connection\n",
     "    \n",
     "    # Create sciflow env file if it doesn't exist\n",
-    "    write_env_file()\n",
+    "    write_env_file(sciflow_dir)\n",
     "    \n",
     "    # Add project root to PYTHONPATH environment variable\n",
-    "    "
+    "    write_edited_pythonpath(project_root, sciflow_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -365,25 +305,7 @@
     }
    ],
    "source": [
-    "sciflow_init(project_root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert any([p for p in sys.path if p == str(Path('../examples').resolve())])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sciflow_examples.abalone import preprocess, train"
+    "sciflow_init(examples_root, sciflow_dir)"
    ]
   }
  ],
