remvoed PYTHONPATH from test env file

--- a/nbs/init.ipynb
+++ b/nbs/init.ipynb
@@ -204,7 +204,7 @@
     "    elif len(existing_ppath) == 1:\n",
     "        prev_line = existing_ppath[0]\n",
     "        if prev_line.find(dir_str) == -1:\n",
-    "            new_line = existing_ppath[0].replace('$PYTHONPATH:', f'$PYTHONPATH:{dir_str}')\n",
+    "            new_line = existing_ppath[0].replace('$PYTHONPATH:', f'$PYTHONPATH:{dir_str}:')\n",
     "            new_text = ''.join(env_lines).replace(prev_line, new_line)\n",
     "        else:\n",
     "            new_text = ''.join(env_lines)\n",
@@ -306,6 +306,35 @@
    ],
    "source": [
     "sciflow_init(examples_root, sciflow_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(env_path, 'r') as env_file:\n",
+    "    env_file_contents = env_file.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(f\"export PYTHONPATH=$PYTHONPATH:{str(examples_root.resolve())}:{str(test_root.resolve())}\" == env_file_contents[-1].strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(env_path, 'w') as env_file:\n",
+    "    env_file.write(''.join(env_file_contents[:-1]))"
    ]
   }
  ],
